feat: 言語バージョンアップに伴う対応、ListenerAdapterに切り替え